# org-structure-api

./: Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
app/: main.py
app/core/: config.py  database.py
app/models/: __init__.py  departaments.py  departments.py
app/repositories/: department_repo.py
app/routes/: departments.py
app/schemas/: departments.py
app/services/: departament_service.py  departaments.py
app/tests/: conftest.py  test_schemas.py  test_service.py
migrations/: env.py
migrations/versions/: 56cd0be03265_creating_department_and_employee_models.py
