[project]
name = "org-structure-api"
version = "0.1.0"
description = "Organization Structure API"
authors = [
    {name = "Wiltort",email = "wiltort21@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry]
package-mode = false

[tool.pytest.ini_options]
testpaths = ["app/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]
stage = [
    "uvicorn (>=0.46.0,<0.47.0)"
]
